...
  guardiansApprovedTitle: "¡Aprobado!",
  guardiansApprovedMessage:
    "Tus guardianes aprobaron la recuperación de tu cuenta, recuperando datos...",
  noRecoveryDni:
    "No se encontró el DNI de recuperación. Regresa e inténtalo de nuevo.",
  guardiansTitleStatus: "Estado",
  connectBtnForgot: "Olvidé mi cuenta",
  messagetorecovery:
    "Solicitud de recuperación enviada.Los guardianes deben aprobarla en las siguientes horas desde su cuenta.",
  recoveryAccountWithGuardians: "Recuperar cuenta con guardianes",
  confirmDataCorrect: "Confirma que los datos son correctos",

  //Register user
...
    "necesitamos que subas fotos claras de tu carnet de identidad:",
  idLabel: "Número de carnet",
  idPlaceholder: "Escribe tu número de CI",
  frontLabel: "Anverso",
  backLabel: "Reverso",
  checking: "Verificando...",
  recoveryAccount: "Recuperar cuenta",
  DniExists: "Ya fue registrado, intente recuperar su cuenta.",
  DniIssueTitle: "El carnet:",
  DniNotFoundMsg: "No se ha encontrado, regístrese por favor.",
  // Page 3
  titleCamera: "Verificación facial",
  description_note: "Prepárate para una selfie",
...
  permissionDeniedMessageCamera: "No se puede acceder a la cámara.",
  photoRequiredTitle: "Foto requerida",
  photoRequiredMessage: "Debes tomar una foto para continuar.",
  takePhotoTitle: "Toma una foto de tu rostro",
  loadingCamera: "Cargando cámara...",
  tapToSelectPhoto: "Toca para seleccionar una foto",
  nextButton: "Siguiente",
  verifyingIdentityTitle: "Estamos verificando tu identidad",
  verifyingIdentityMessage:
    "Por favor, permanece en esta pantalla mientras completamos el proceso de verificación.",
  //Page 5
  frontBackOrderError:
    "Las imágenes están desordenadas (front/back). Por favor, vuelve a capturar en el orden correcto.",
...
  accumulatedAmount: "Monto Acumulado",
  pendingInvitationsSent: "Invitaciones enviadas pendientes",
  registeredInvitations: "Invitaciones registradas",

  //Inicio
  connectTitle: "Aplicación Electoral",
  connectBtnInfo: "Saber más",
  connectBtnRegister: "Registrar cuenta",
  register: "REGISTRARSE",
  sessionReceived: "Sesión recibida",
  sessionReceivedMessage: "Ingrese su pin para iniciar la sesión compartida.",
  sharedSessionError: "Error al recibir archivos compartidos.",
  sharedSessionTitle: "Solicitud para compartir la sesión de Wira",
...
  retryRecovery: "Reintentar",
  recoveringData: "Recuperando datos...",
  recoverySuccess:
    "Sus datos fueron recuperados, ingrese su PIN a continuación para iniciar sesión",
  recoveryError: "Error en la recuperación. Verifica tu CI y PIN.",

  connectBtnLogin: "Tengo una cuenta",
  wira: "Tu Voto Decide",
  downloadingData: "Descargando datos adicionales: ",
  downloadingFailed: "Revisa tu conexión a internet.",
  initApp: "Iniciando...",
  downloadPromptTitle: "Descarga de archivos de verificación",
  downloadPromptMessage:
...
