...
  ElectoralLocationsSave: 'ElectoralLocationsSave',
  OfflinePendingScreen: 'OfflinePendingScreen',
  UnifiedTableScreen: 'UnifiedTableScreen',
  UnifiedTableScreenUser: 'UnifiedTableScreenUser',
  ActaDetailScreen: 'ActaDetailScreen',
  Splash: 'Splash',
  OnBoarding: 'OnBoarding',
  OnBoardingGuardians: 'OnBoardingGuardians',
  AuthNavigation: 'AuthNavigation',
  TabNavigation: 'TabNavigation',

  // Recovery
  MyGuardiansStatus: 'MyGuardiansStatus',
...
