appId: com.tuvotodecide
---
# Test: Acceder a opciones de recuperación
- launchApp:
    clearState: false
- tapOn: "Tengo una cuenta"
- tapOn: "Olvidé mi cuenta"
- assertVisible: "Recuperar cuenta"
- assertVisible: "Recuperar con QR"
- assertVisible: "Recuperar con tutores"
- assertVisible: "Buscar mi usuario"
